# strManager

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  libstrmanager.pc  libstrmanager.pc.in  libtool  strManager.doxyfile
examples/BC_strManager/: Makefile  README
examples/BC_strManager/conf/: logger.properties
examples/BC_strManager/src/: main.cpp
examples/CL_strManager/: Makefile
examples/CL_strManager/conf/: logger.properties
examples/CL_strManager/src/: main.cpp
examples/WS_strManager/: Makefile
examples/WS_strManager/conf/: logger.properties
examples/WS_strManager/src/: main_ws.cpp  ws_generation.txt
examples/WS_strManager/src/ws/: web_service.h
examples/ZAP_strManager/: Makefile  README
examples/ZAP_strManager/conf/: logger.properties
examples/ZAP_strManager/src/: main.cpp
include/libstrmanager/: Constants.h  ForwardWorker.h  Manager.h  Message.h  RtcpWorker.h  StatsStreamList.h  StatsWorker.h  StreamList.h  UdpStream.h  Worker.h
libltdl/: Makefile.in  aclocal.m4  configure
libltdl/autom4te.cache/: output.1  requests  traces.0  traces.1
m4/: Makefile  Makefile.am  Makefile.in
src/: Manager.cpp  Message.cpp
src/streamlists/: StatsStreamList.cpp  StreamList.cpp
src/streams/: UdpStream.cpp
src/workers/: ForwardWorker.cpp  RtcpWorker.cpp  StatsWorker.cpp  Worker.cpp
